update help CommandDefinition